Fix image orientation when upload on Firefox

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -60,6 +60,7 @@ body {
 .image-upload img
 {
     width: 140px;
+    image-orientation: from-image;
 }
 
 .select2-selection--single {
